--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -28,10 +28,18 @@
 }
  */
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background-color: var(--color-surface-70, #f3eeea);
+  min-height: 100vh;
 }
 
 main {
@@ -39,6 +47,7 @@ main {
   padding: 4rem 0.75rem 0.75rem 0.75rem;
   max-width: 1200px;
   width: 100%;
+  margin: 0;
 }
 
 p,
@@ -55,8 +64,13 @@ h1 {
 
 cmc-button,
 cmc-select,
-cmc-textfield {
+cmc-textfield,
+cmc-range-bar {
   width: 100%;
   max-width: 600px;
   margin-bottom: 1.5rem;
+}
+
+cmc-range-bar {
+  margin-bottom: 3rem;
 }
