--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -32,18 +32,18 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  zdisplay: flex;
+  zflex-direction: column;
+  zalign-items: center;
   background-color: var(--color-surface-70, #f3eeea);
-  min-height: 100vh;
 }
 
 main {
-  min-height: 100vh;
+  min-height: 100%;
   padding: 4rem 0.75rem 0.75rem 0.75rem;
   max-width: 1200px;
   width: 100%;
